package com.example.demo.response;

public class FavouritesResponse {

    private int id;
    private int IdUser;
    private int idStation;


}
